--- a/exercise/templates/exercise/staff/_results_table.html
+++ b/exercise/templates/exercise/staff/_results_table.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
@@ -11,7 +13,7 @@
             	<a href="{{ exercise.get_absolute_url }}">{{ exercise.name }}</a>
             </th>
             {% endfor %}
-            <th>{‰ trans "Sum" %}</th>
+            <th>{% trans "Sum" %}</th>
         </tr>
     </thead>
     <tbody>
