--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -16,7 +16,7 @@
 <div class="row">
     
     <div class="span2">
-        <ul class="nav nav-list">
+        <ul id="course-menu" class="nav nav-list">
         {% include "course/_course_menu.html" with instance=instance %}
         </ul>
     </div>
