--- a/course/templates/course/teacher/edit_exercise.html
+++ b/course/templates/course/teacher/edit_exercise.html
@@ -64,7 +64,7 @@
 <script type="text/javascript">
     $("#fetch-metadata").click(function() {
         $("#metadata-progress").show();
-        $.getJSON("{% url 'course.teacher_views.fetch_exercise_metadata' course_url=course.url instance_url=instance.url %}",
+        $.getJSON("{% url 'exercise_metadata' course_url=course.url instance_url=instance.url %}",
         	{
                 exercise_url: $("#id_service_url").val()
             },
