--- a/exercise/templates/exercise/submission.html
+++ b/exercise/templates/exercise/submission.html
@@ -9,8 +9,7 @@
         {% for file in submission.files.all %}
         <li>
         	<i class="icon-file"></i>
-            <a href="{{ file.get_absolute_url }}">{{ file.filename }}</a>
-            ({{ file.file_object.size|filesizeformat }})
+        	{% include "exercise/_file_link.html" %}
         </li>
         {% endfor %}
     </ul>
