New Shibboleth integration.

--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -7,18 +7,16 @@
 
 {% block content %}
 
+{% if shibboleth_login %}
 <div class="hero-unit">
-	<h2>Log in with Aalto WebLogin</h2>
-	<p>Click the button below to log in with Aalto University's Shibboleth service. You may want to read our privacy
-		policy
-		<a href="{% url 'privacy_policy' %}">here</a>.
-	</p>
-	<p>
-		<a class="btn btn-primary" href="{% url 'shib_login' %}">Aalto WebLogin</a>
-	</p>
+	{% url 'privacy_policy' as policy_url %}
+	{% include 'shibboleth/login_link.html' %}
 </div>
+<h3>
+	{% trans "Alternatively, you can log in with your A+ specific account" %}
+</h3>
+{% endif %}
 
-<h3>Alternatively, you can log in with your A+ specific account</h3>
 <form method="post" action="">{% csrf_token %}
 	<div class="clearfix">
 		{{ form.username.label_tag }}
@@ -32,7 +30,7 @@
 	</div>
 
 	<div class="actions">
-		<input type="submit" value="{% trans "Login" %}" class="btn" />
+		<input type="submit" value="{% trans 'Login' %}" class="btn" />
 		<input type="hidden" name="next" value="{{ next }}" />
 	</div>
 </form>
