Fix errors in apps.

--- a/exercise/templates/exercise/user_score.html
+++ b/exercise/templates/exercise/user_score.html
@@ -187,7 +187,7 @@
         </div>
         {% endif %}
         
-        {% plugin_renderers user course_instance as plugins %} 
+        {% plugin_renderers user instance as plugins %} 
         {% for plugin in plugins %}
             {{ plugin.render|safe }}
         {% endfor %}
