Refactor submission count/max.

--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% block pagetitle %}
-    {{ instance.course.name }}
+{% block title %}
+    {{ course.name }}
 {% endblock %}
 
 {% block maintitle %}
