Add module content with embedded exercises.

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -1,6 +1,16 @@
 {% extends "exercise/exercise_base.html" %}
 {% load i18n %}
 
+{% block scripts %}
+{{ block.super }}
+<script src="{% static 'exercise/poll.js' %}"></script>
+{% endblock %}
+
 {% block exercisecontent %}
+    
     {{ page.content|safe }}
+    
+    {% if page.is_wait %}
+	<div class="exercise-wait" data-poll-url="{% url 'exercise.views.poll_submission' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}"></div>
+	{% endif %}
 {% endblock %}
