Add grading polling.

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -9,9 +9,7 @@
 
 {% block exercisecontent %}
 
-    {{ page.content|safe }}
+  {{ page.content|safe }}
 
-    {% if page.is_wait %}
-	<div class="exercise-wait" data-poll-url="{% url 'exercise.views.poll_submission' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}"></div>
-	{% endif %}
+  {% include "exercise/_exercise_wait.html" %}
 {% endblock %}
