--- a/course/templates/course/module.html
+++ b/course/templates/course/module.html
@@ -23,15 +23,11 @@
 {% block coursecontent %}
 <div id="module" data-module-url="{% url 'course.views.view_module' course_url=course.url instance_url=instance.url module_url=module.url %}">
 
-	<div id="loading-indicator" style="display:none;"
+	<div id="loading-indicator" class="hide progress progress-striped active"
 		data-msg-load="{% trans 'Loading exercise...' %}"
-		data-msg-error="{% trans 'Communication error with the exercise.' %}"
 		data-msg-submit="{% trans 'Posting submission...' %}"
-		data-msg-grade="{% trans 'Grading submission...' %}"
-		data-msg-timeout="{% trans 'Grading takes longer than expected. Load the page later to see the result.' %}">
-		<div class="progress progress-striped active">
-			<div class="bar" style="width:100%;"></div>
-		</div>
+		data-msg-error="{% trans 'Communication error with the exercise.' %}">
+		<div class="bar" style="width:100%;"></div>
 	</div>
 
 	<div id="embed-modal" class="modal hide">
@@ -40,7 +36,7 @@
 				<div class="modal-body"></div>
 				<div class="modal-footer">
 					<button type="button" class="btn" data-dismiss="modal">{% trans "Close" %}</button>
-				</div>				
+				</div>
 			</div>
 		</div>
 	</div>
