--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -54,9 +54,7 @@
 
 				{{ page.content|safe }}
 
-				{% if page.is_wait %}
-				<div class="exercise-wait" data-poll-url="{% url 'exercise.views.poll_submission' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}"></div>
-				{% endif %}
+				{% include "exercise/_exercise_wait.html" %}
 			</div>
 		</div>
 	</body>
