Modernize Django URL patterns and resolving.

--- a/course/templates/course/_course_dropdown_menu.html
+++ b/course/templates/course/_course_dropdown_menu.html
@@ -8,7 +8,7 @@
 {% endfor %}
 <li class="divider"></li>
 <li>
-	<a href="{% url 'course.views.course_archive' %}">
+	<a href="{% url 'archive' %}">
 		{% trans "Course archive" %}
 	</a>
 </li>
