--- a/course/templates/course/teacher/course_instance.html
+++ b/course/templates/course/teacher/course_instance.html
@@ -44,18 +44,18 @@
                 <strong>{{ module.name }}</strong>
             </th>
             <td>
-                <a class="btn btn-mini" href="{% url 'course.teacher_views.add_or_edit_module' course_url=course.url instance_url=instance.url module_id=module.id %}">
+                <a class="btn btn-mini" href="{% url 'module-edit' course_url=course.url instance_url=instance.url module_id=module.id %}">
                     <i class="icon-edit"></i> {% trans "Edit module" %}
                 </a>
                 {% if module.learning_objects.count == 0 %}
-                <a class="btn btn-mini" href="{% url 'course.teacher_views.remove_module' course_url=course.url instance_url=instance.url module_id=module.id %}">
+                <a class="btn btn-mini" href="{% url 'module-remove' course_url=course.url instance_url=instance.url module_id=module.id %}">
                 	<i class="icon-remove"></i> {% trans "Remove" %}
                 </a>
                 {% endif %}
             </td>
             <td>
                 <div class="btn-group">
-                    <a class="btn btn-success" href="{% url 'course.teacher_views.add_or_edit_exercise' course_url=course.url instance_url=instance.url module_id=module.id %}">
+                    <a class="btn btn-success" href="{% url 'exercise-add' course_url=course.url instance_url=instance.url module_id=module.id %}">
                         <i class=" icon-white"></i> {% trans "Add New Exercise" %}
                     </a>
                     <button type="button" class="btn btn- dropdown-toggle" data-toggle="dropdown">
@@ -63,13 +63,12 @@
                     </button>
                   	<ul class="dropdown-menu" role="menu">
                         <li>
-                        	<a class="" href="{% url 'course.teacher_views.add_or_edit_exercise' course_url=course.url instance_url=instance.url module_id=module.id %}">
+                        	<a class="" href="{% url 'exercise-add' course_url=course.url instance_url=instance.url module_id=module.id %}">
                              {% trans "Add Exercise" %}
                         </a></li>
-                        <li><a href="{% url 'course.teacher_views.add_or_edit_exercise' course_url=course.url instance_url=instance.url module_id=module.id exercise_type='exercise_with_attachment' %}">
+                        <li><a href="{% url 'exercise-add-type' course_url=course.url instance_url=instance.url module_id=module.id exercise_type='exercise_with_attachment' %}">
                             {% trans "Add Exercise with Attachment" %}</a>
                         </li>
-
                     </ul>
                 </div>
             </td>
@@ -80,15 +79,15 @@
                     {{ object.order }}. {{ object.name }}
                 </td>
                 <td>
-                    <a class="btn btn-mini" href="{% url 'course.teacher_views.add_or_edit_exercise' course_url=course.url instance_url=instance.url exercise_id=object.id %}">
+                    <a class="btn btn-mini" href="{% url 'exercise-edit' course_url=course.url instance_url=instance.url exercise_id=object.id %}">
                         <i class="icon-edit"></i> {% trans "Edit" %}
                     </a>
-                    <a class="btn btn-mini" href="{% url 'course.teacher_views.remove_exercise' course_url=course.url instance_url=instance.url exercise_id=object.id %}">
+                    <a class="btn btn-mini" href="{% url 'exercise-remove' course_url=course.url instance_url=instance.url exercise_id=object.id %}">
                         <i class="icon-remove"></i> {% trans "Remove" %}
                     </a>
                 </td>
                 <td>
-                    <a href="{% url 'exercise.staff_views.list_exercise_submissions' course_url=course.url instance_url=instance.url exercise_id=object.id %}">
+                    <a href="{% url 'submission-list' course_url=course.url instance_url=instance.url exercise_id=object.id %}">
                     	{% trans "View submissions" %}
                     </a>
                 </td>
@@ -98,17 +97,17 @@
     </tbody>
 </table>
 
-<a class="btn btn-primary btn-mini" href="{% url 'course.teacher_views.add_or_edit_module' course_url=course.url instance_url=instance.url %}">
+<a class="btn btn-primary btn-mini" href="{% url 'module-add' course_url=course.url instance_url=instance.url %}">
     <i class="icon-plus-sign icon-white"></i> {% trans "Add new module" %}
 </a>
 
 
 <h3>{% trans "Deadline Rule Deviations" %}</h3>
 <p>{% trans "Add or view personalized deadlines for students for exercises." %}</p>
-<a class="btn btn-primary btn-mini" href="{% url 'deviations.teacher_views.add_dl_deviations' course_url=course.url instance_url=instance.url %}">
+<a class="btn btn-primary btn-mini" href="{% url 'deviations-add-dl' course_url=course.url instance_url=instance.url %}">
     <i class="icon-plus-sign icon-white"></i> {% trans "Add Deadline Deviations" %}
 </a>
-<a class="btn btn-primary btn-mini" href="{% url 'deviations.teacher_views.list_dl_deviations' course_url=course.url instance_url=instance.url %}">
+<a class="btn btn-primary btn-mini" href="{% url 'deviations-list-dl' course_url=course.url instance_url=instance.url %}">
     <i class="icon-list-alt icon-white"></i> {% trans "List Deadline Deviations" %}
 </a>
 
@@ -152,7 +151,7 @@
    {% endblocktrans %}
 
 </div>
-<form method="post" action="{% url 'exercise.staff_views.batch_create_and_assess_submissions' course_url=course.url instance_url=instance.url %}">
+<form method="post" action="{% url 'batch-assess' course_url=course.url instance_url=instance.url %}">
 	{% csrf_token %}
     <textarea name="submissions_json"></textarea>
     <button type="submit" class="btn">{% trans "Submit" %}</button>
