--- a/course/templates/course/teacher/remove_module.html
+++ b/course/templates/course/teacher/remove_module.html
@@ -15,7 +15,7 @@
 {% if exercise_count > 0 %}
 <div class="alert alert-danger">
 	{% blocktrans with count=exercise_count %}
-	This module has {{count}} exercises and cannot be removed. 
+	This module has {{count}} exercises and cannot be removed.
 	{% endblocktrans %}
 </div>
 {% endif %}
@@ -23,7 +23,7 @@
 <form method="post">
     {% csrf_token %}
     <input class="btn btn-danger" type="submit" value="{% trans 'Remove' %}" />
-    <a class="btn btn-primary" href="{% url 'course.teacher_views.edit_course' course_url=course.url instance_url=instance.url %}">
+    <a class="btn btn-primary" href="{% url 'course-edit' course_url=course.url instance_url=instance.url %}">
     	{% trans "Cancel" %}
     </a>
 </form>
