--- a/exercise/templates/exercise/_exercise_wait.html
+++ b/exercise/templates/exercise/_exercise_wait.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% if page.is_wait %}
 <div class="exercise-wait progress progress-striped active"
-  data-poll-url="{% url 'exercise.views.poll_submission' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}"
+  data-poll-url="{% url 'submission-poll' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}"
   data-msg-error="{% trans 'Communication error with the exercise.' %}"
   data-msg-timeout="{% trans 'Unfortunately grading takes longer than expected. Return later to see the result.' %}">
   <div class="bar" style="width:100%;">
