--- a/exercise/templates/exercise/staff/inspect_submission.html
+++ b/exercise/templates/exercise/staff/inspect_submission.html
@@ -14,7 +14,7 @@
                 <span class="divider">/</span>
             </li>
             <li>
-                <a href="{% url 'exercise.staff_views.list_exercise_submissions' course_url=course.url instance_url=instance.url exercise_id=exercise.id %}">
+                <a href="{% url 'submission-list' course_url=course.url instance_url=instance.url exercise_id=exercise.id %}">
                 	{{ exercise.name }}
                 </a>
                 <span class="divider">/</span>
@@ -29,18 +29,18 @@
 <div class="row">
     <div class="span4" id="student-submission">
         <h2>{% trans "Submission" %}</h2>
-        
+
         <div class="well">
             {% if is_teacher or is_assistant and submission.exercise.allow_assistant_grading %}
             <p>
-                <a class="btn btn-primary" href="{% url 'exercise.staff_views.assess_submission' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}">
+                <a class="btn btn-primary" href="{% url 'submission-assess' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}">
                 	{% trans "Assess this submission" %}
                 </a>
             </p>
             {% endif %}
-            
+
             <hr />
-            
+
             <h3>{% trans "General information" %}</h3>
             <dl>
                 <dt>{% trans "Submitters" %}</dt>
@@ -64,9 +64,9 @@
                 <dd>-{{ submission.late_penalty_applied|percent }}%</dd>
             </dl>
             {% endif %}
-            
+
             <hr />
-            
+
             <h3>{% trans "Submitted files" %}</h3>
             <ul class="unstyled">
                 {% for file in submission.files.all %}
@@ -80,9 +80,9 @@
                 </li>
                 {% endfor %}
             </ul>
-            
+
             <hr />
-            
+
             <h3>{% trans "Submitted values" %}</h3>
             <dl>
             	{% for item in submission.submission_data %}
@@ -92,9 +92,9 @@
                 <dt>{% trans "No values" %}</dt>
             	{% endfor %}
             </dl>
-            
+
             <hr />
-            
+
             <h3>Re-Submit to Service</h3>
             <p>
             	{% blocktrans %}
@@ -106,9 +106,9 @@
                 {% endblocktrans %}
             </p>
             <p>
-            	<form method="post" action="{% url 'exercise.staff_views.resubmit_to_service' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}">
+            	<form method="post" action="{% url 'submission-re-submit' course_url=course.url instance_url=instance.url exercise_id=exercise.id submission_id=submission.id %}">
             		{% csrf_token %}
-            		<input class="btn btn-primary" type="submit" value="{% trans 'Re-Submit to Service' %}" />
+            		<input class="btn btn-primary" type="submit" value="{% trans 'Re-submit to service' %}" />
             	</form>
             </p>
 
@@ -125,11 +125,11 @@
             </dl>
         </div>
     </div>
-    
+
     <div class="span6" id="generated-feedback">
         <h2>{% trans "Feedback" %}</h2>
         <div class="well">
-        
+
             {% if submission.assistant_feedback %}
             <h2>Assistant feedback</h2>
             {{ submission.assistant_feedback|safe }}
@@ -147,7 +147,7 @@
             	{% trans "No grader feedback available for this submission." %}
             </div>
         	{% endif %}
-        
+
         </div>
     </div>
 </div>
