--- a/shibboleth_login/templates/shibboleth/login_link.html
+++ b/shibboleth_login/templates/shibboleth/login_link.html
@@ -12,7 +12,7 @@
 	{% endif %}
 </p>
 <p>
-	<a class="btn btn-primary" href="{% url 'shibboleth_login.views.login' %}?next={{ next|iriencode }}">
+	<a class="btn btn-primary" href="{% url 'shibboleth-login' %}?next={{ next|iriencode }}">
 		{{ login_button_text }}
 	</a>
 </p>
